dar forma a las monedas en css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 <body>
     <h1>Cara o Cruz</h1>
     <section class="container">
-        <div class="cara"><img src="./resours/cara.png" id="cara"></div> 
-        <div class="cruz"><img src="./resours/cruz.png" id="cruz"></div> 
+        <div class="cara" id="cara">
+            <img src="./resours/cara.png" id="cara">
+        </div> 
+        <div class="cruz" id="cruz">
+            <img src="./resours/cruz.png" id="cruz">
+        </div> 
     </section>
     <section class="button">
         <div>
